<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/poster"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/poster"
        android:src="@drawable/poster_shurik"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/section_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="director, director_label, title, poster2"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/poster2"
        app:layout_constraintStart_toStartOf="@+id/content_start"
        app:layout_constraintTop_toBottomOf="@id/poster"/>

    <ImageView
        android:id="@+id/poster2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/poster2"
        app:layout_constraintEnd_toEndOf="@+id/content_end"
        app:layout_constraintTop_toBottomOf="@id/poster"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/director_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/director_label"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/content_start"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/director"
        android:textColor="@color/white"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@id/director_label"
        app:layout_constraintEnd_toStartOf="@id/poster2"
        app:layout_constraintStart_toEndOf="@id/director_label" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/title_section_bottom_barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="title, poster2, director_label, director" />

    <TextView
        android:id="@+id/short_descriptions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/movie_short_description"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/content_end"
        app:layout_constraintStart_toStartOf="@+id/content_start"
        app:layout_constraintTop_toBottomOf="@id/title_section_bottom_barrier" />

    <TextView
        android:id="@+id/actors_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/actors_label"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/content_end"
        app:layout_constraintStart_toStartOf="@+id/content_start"
        app:layout_constraintTop_toBottomOf="@+id/short_descriptions" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/actors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="actor_1, actor_2, actor_3, actor_4, actor_5, actor_6, actor_7, actor_8"
        app:flow_firstHorizontalBias="0"
        app:flow_firstVerticalStyle="packed"
        app:flow_horizontalGap="8dp"
        app:flow_horizontalStyle="packed"
        app:flow_verticalGap="8dp"
        app:flow_wrapMode="chain"
        app:layout_constraintEnd_toEndOf="@+id/content_end"
        app:layout_constraintStart_toStartOf="@+id/content_start"
        app:layout_constraintTop_toBottomOf="@+id/actors_label" />

    <TextView
        android:id="@+id/actor_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/actor_btn"
        android:text="@string/actor_1" />

    <TextView
        android:id="@+id/actor_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/actor_btn"
        android:text="@string/actor_2" />

    <TextView
        android:id="@+id/actor_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/actor_btn"
        android:text="@string/actor_3" />

    <TextView
        android:id="@+id/actor_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/actor_btn"
        android:text="@string/actor_4" />

    <TextView
        android:id="@+id/actor_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/actor_btn"
        android:text="@string/actor_5" />

    <TextView
        android:id="@+id/actor_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/actor_btn"
        android:text="@string/actor_6" />

    <TextView
        android:id="@+id/actor_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/actor_btn"
        android:text="@string/actor_7" />

    <TextView
        android:id="@+id/actor_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/actor_btn"
        android:text="@string/actor_8" />

    <Button
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/like"
        app:layout_constraintEnd_toStartOf="@id/watch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actors"
        app:layout_goneMarginEnd="0dp" />

    <Button
        android:id="@+id/watch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/watch"
        app:layout_constraintEnd_toStartOf="@+id/share"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/like"
        app:layout_constraintTop_toBottomOf="@+id/actors"
        app:layout_goneMarginEnd="0dp" />

    <Button
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/share"
        app:layout_constraintStart_toEndOf="@+id/watch"
        app:layout_constraintTop_toBottomOf="@+id/actors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_goneMarginEnd="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>